# FFI_java

./: CMakeLists.txt  notes.txt
jna/: Hello.java  run_commands.sh
nachtimwald/: .syntastic_c_config  CMakeLists.txt  Makefile  compile_commands.sh  helloWorld.java  hello_world  hello_world.c  hello_world.c.old  hello_world.d  run_commands.sh
nachtimwald/bak/: Main.java  main.c
